--- a/TODO
+++ b/TODO
@@ -1,12 +1,13 @@
+* Merge requests
+
 * User account management
 * Web interface to create repos and groups
-* Merge requests
-* Fix diff view
-* Subgroups
-* API
-* Email integration
 
-* RSS
+* Diff view
+* Subgroups
+* Email integration
+* RSS/Atom on everything
 
 * Unit tests
-* Refactoring other stuff
+
+* Consider switching to fasthttp to access the underlying net.Conn
