Rename man pages to start with lindenii-forge-

--- a/man/lindenii-forge-hookc.1
+++ b/man/lindenii-forge-hookc.1
@@ -1,10 +1,10 @@
 .\" SPDX-License-Identifier: AGPL-3.0-only
 .\" SPDX-FileCopyrightText: Copyright (c) 2025 Runxi Yu <https://runxiyu.org>
 .Dd March 30, 2025
-.Dt HOOKC 1
+.Dt LINDENII-FORGE-HOOKC 1
 .Os Lindenii Forge
 .Sh NAME
-.Nm hookc
+.Nm lindenii-forge-hookc
 .Nd helper binary to delegate Git hook behavior to the forge daemon
 .Sh SYNOPSIS
 .Nm
@@ -71,4 +71,4 @@ are pipes, which is not guaranteed in future versions of Git.
 .An Test_User Aq Mt hax@runxiyu.org
 .Sh SEE ALSO
 .Xr git-receive-pack 1 ,
-.Xr forge 1
+.Xr lindenii-forge 1
