--- a/man/lindenii-forge-mail.5
+++ b/man/lindenii-forge-mail.5
@@ -1,10 +1,10 @@
 .\" SPDX-License-Identifier: AGPL-3.0-only
 .\" SPDX-FileCopyrightText: Copyright (c) 2025 Runxi Yu <https://runxiyu.org>
 .Dd March 30, 2025
-.Dt FORGE-MAIL 5
+.Dt LINDENII-FORGE-MAIL 5
 .Os Lindenii Forge
 .Sh NAME
-.Nm forge-mail
+.Nm lindenii-forge-mail
 .Nd configuring Lindenii Forge email integration
 .Sh DESCRIPTION
 .Nm
@@ -23,8 +23,8 @@ match from any for domain "forge.lindenii.runxiyu.org" action "FORGE"
 @ forge
 .Ed
 .Sh SEE ALSO
-.Xr forge 1 ,
-.Xr forge 5 ,
+.Xr lindenii-forge 1 ,
+.Xr lindenii-forge 5 ,
 .Xr smtpd.conf 5
 .Sh AUTHORS
 .An Runxi Yu Aq Mt https://runxiyu.org
