--- a/man/lindenii-forge.1
+++ b/man/lindenii-forge.1
@@ -1,10 +1,10 @@
 .\" SPDX-License-Identifier: AGPL-3.0-only
 .\" SPDX-FileCopyrightText: Copyright (c) 2025 Runxi Yu <https://runxiyu.org>
 .Dd March 30, 2025
-.Dt FORGE 1
+.Dt LINDENII-FORGE 1
 .Os Lindenii Forge
 .Sh NAME
-.Nm forge
+.Nm lindenii-forge
 .Nd Lindenii Forge server daemon
 .Sh SYNOPSIS
 .Nm
@@ -14,7 +14,7 @@
 is the main server daemon for Lindenii Forge.
 .Pp
 All configuration is loaded from a configuration file; see
-.Xr forge 5 .
+.Xr lindenii-forge 5 .
 .Pp
 All listeners are long-lived; the process runs until interrupted.
 .Sh OPTIONS
@@ -29,7 +29,7 @@ The path to the configuration file. Defaults to
 Default configuration file.
 .El
 .Sh SEE ALSO
-.Xr forge 5
+.Xr lindenii-forge 5
 .Sh AUTHORS
 .An Runxi Yu Aq Mt https://runxiyu.org
 .An Test_User Aq Mt hax@runxiyu.org
