--- a/man/lindenii-forge.5
+++ b/man/lindenii-forge.5
@@ -1,15 +1,15 @@
 .\" SPDX-License-Identifier: AGPL-3.0-only
 .\" SPDX-FileCopyrightText: Copyright (c) 2025 Runxi Yu <https://runxiyu.org>
 .Dd March 30, 2025
-.Dt FORGE 5
+.Dt LINDENII-FORGE 5
 .Os Lindenii Forge
 .Sh NAME
-.Nm forge.scfg
+.Nm lindenii-forge.scfg
 .Nd configuration file for Lindenii Forge
 .Sh DESCRIPTION
 .Nm
 describes the configuration for
-.Xr forge 1
+.Xr lindenii-forge 1
 instance using the
 scfg
 format.
@@ -125,8 +125,8 @@ General timeouts for LMTP connections.
 Default path to the configuration file.
 .El
 .Sh SEE ALSO
-.Xr forge 1 ,
-.Xr hookc 1 ,
+.Xr lindenii-forge 1 ,
+.Xr lindenii-forge-hookc 1 ,
 .Lk https://git.sr.ht/~emersion/scfg scfg
 .Sh AUTHORS
 .An Runxi Yu Aq Mt https://runxiyu.org
