config: Add git.socket for git2d

--- a/man/lindenii-forge.5
+++ b/man/lindenii-forge.5
@@ -65,6 +65,9 @@ Configures Git repository storage.
 .Bl -tag -width Ds
 .It Ic repo_dir
 Filesystem path under which new repositories are stored.
+.It Ic socket
+Filesystem path for the socket listened on by
+.Xr lindenii-forge-git2d 1
 .El
 .It Ic db
 Configures database connection.
