--- a/man/lindenii-forge.5
+++ b/man/lindenii-forge.5
@@ -67,7 +67,11 @@ Configures Git repository storage.
 Filesystem path under which new repositories are stored.
 .It Ic socket
 Filesystem path for the socket listened on by
+.Xr lindenii-forge-git2d 1 .
+.It Ic daemon_path
+Where
 .Xr lindenii-forge-git2d 1
+should be deployed to and run from.
 .El
 .It Ic db
 Configures database connection.
